--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,37 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+.country-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.country--text{
+  margin: 0;
+  padding: 8px;
+  font-size: 14px;
+}
+
+.country--item{
+  display: flex;
+  align-items: center;
+}
+
+.country--info--text {
+  margin: 0;
+    padding: 10px;
+    font-size: 24px;
+}
+
+.country--name {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+span {
+  font-weight: 400;
+}
+
